# docs/web/api/openapi.yaml
@@ -121,6 +121,18 @@ components:
       - updated_at
       - username
       type: object
+    ProfilesCollection:
+      properties:
+        data:
+          items:
+            $ref: '#/components/schemas/ProfileData'
+          type: array
+        links:
+          $ref: '#/components/schemas/ProfilesCollection_links'
+      required:
+      - data
+      - links
+      type: object
     CreateProfile_data_attributes:
       properties:
         username:
@@ -259,4 +271,26 @@ components:
       - attributes
       - id
       - type
+      type: object
+    ProfilesCollection_links:
+      properties:
+        page_number:
+          description: The current page number.
+          example: 1
+          format: int64
+          type: integer
+        page_size:
+          description: The number of items per page.
+          example: 10
+          format: int64
+          type: integer
+        total_items:
+          description: The total number of items available.
+          example: 100
+          format: int64
+          type: integer
+      required:
+      - page_number
+      - page_size
+      - total_items
       type: object
