# resources/model_profiles_collection.go
@@ -1,0 +1,186 @@
+/*
+Chains lab profile service
+
+profile service docs
+
+API version: 0.0.1
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package resources
+
+import (
+	"encoding/json"
+	"bytes"
+	"fmt"
+)
+
+// checks if the ProfilesCollection type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &ProfilesCollection{}
+
+// ProfilesCollection struct for ProfilesCollection
+type ProfilesCollection struct {
+	Data []ProfileData `json:"data"`
+	Links ProfilesCollectionLinks `json:"links"`
+}
+
+type _ProfilesCollection ProfilesCollection
+
+// NewProfilesCollection instantiates a new ProfilesCollection object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewProfilesCollection(data []ProfileData, links ProfilesCollectionLinks) *ProfilesCollection {
+	this := ProfilesCollection{}
+	this.Data = data
+	this.Links = links
+	return &this
+}
+
+// NewProfilesCollectionWithDefaults instantiates a new ProfilesCollection object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewProfilesCollectionWithDefaults() *ProfilesCollection {
+	this := ProfilesCollection{}
+	return &this
+}
+
+// GetData returns the Data field value
+func (o *ProfilesCollection) GetData() []ProfileData {
+	if o == nil {
+		var ret []ProfileData
+		return ret
+	}
+
+	return o.Data
+}
+
+// GetDataOk returns a tuple with the Data field value
+// and a boolean to check if the value has been set.
+func (o *ProfilesCollection) GetDataOk() ([]ProfileData, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return o.Data, true
+}
+
+// SetData sets field value
+func (o *ProfilesCollection) SetData(v []ProfileData) {
+	o.Data = v
+}
+
+// GetLinks returns the Links field value
+func (o *ProfilesCollection) GetLinks() ProfilesCollectionLinks {
+	if o == nil {
+		var ret ProfilesCollectionLinks
+		return ret
+	}
+
+	return o.Links
+}
+
+// GetLinksOk returns a tuple with the Links field value
+// and a boolean to check if the value has been set.
+func (o *ProfilesCollection) GetLinksOk() (*ProfilesCollectionLinks, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Links, true
+}
+
+// SetLinks sets field value
+func (o *ProfilesCollection) SetLinks(v ProfilesCollectionLinks) {
+	o.Links = v
+}
+
+func (o ProfilesCollection) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o ProfilesCollection) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	toSerialize["data"] = o.Data
+	toSerialize["links"] = o.Links
+	return toSerialize, nil
+}
+
+func (o *ProfilesCollection) UnmarshalJSON(data []byte) (err error) {
+	// This validates that all required properties are included in the JSON object
+	// by unmarshalling the object into a generic map with string keys and checking
+	// that every required field exists as a key in the generic map.
+	requiredProperties := []string{
+		"data",
+		"links",
+	}
+
+	allProperties := make(map[string]interface{})
+
+	err = json.Unmarshal(data, &allProperties)
+
+	if err != nil {
+		return err;
+	}
+
+	for _, requiredProperty := range(requiredProperties) {
+		if _, exists := allProperties[requiredProperty]; !exists {
+			return fmt.Errorf("no value given for required property %v", requiredProperty)
+		}
+	}
+
+	varProfilesCollection := _ProfilesCollection{}
+
+	decoder := json.NewDecoder(bytes.NewReader(data))
+	decoder.DisallowUnknownFields()
+	err = decoder.Decode(&varProfilesCollection)
+
+	if err != nil {
+		return err
+	}
+
+	*o = ProfilesCollection(varProfilesCollection)
+
+	return err
+}
+
+type NullableProfilesCollection struct {
+	value *ProfilesCollection
+	isSet bool
+}
+
+func (v NullableProfilesCollection) Get() *ProfilesCollection {
+	return v.value
+}
+
+func (v *NullableProfilesCollection) Set(val *ProfilesCollection) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableProfilesCollection) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableProfilesCollection) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableProfilesCollection(val *ProfilesCollection) *NullableProfilesCollection {
+	return &NullableProfilesCollection{value: val, isSet: true}
+}
+
+func (v NullableProfilesCollection) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableProfilesCollection) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
